# kami-sales-dashboard

./: .gitignore  Dockerfile  docker-compose.yml  kami_dash.sh  pyproject.toml  requirements.txt
kami_sales_dashboard/: app.py  components.py  constants.py  dataframe.py
notebooks/: notebook.ipynb
